project title fix and skill word wrap fix

--- a/src/App.css
+++ b/src/App.css
@@ -332,6 +332,9 @@ a {
   .timeline-block p {
     margin: 0; }
 
+.skill-block {
+  word-wrap: break-word; }
+
 @media only screen and (max-width: 576px) {
   .work-with-me {
     right: 1rem; }
@@ -405,7 +408,6 @@ figure.effect {
     -webkit-transform: scale3d(1.05, 1.05, 1);
     transform: scale3d(1.05, 1.05, 1); }
   figure.effect figcaption {
-    padding: 2em;
     color: #fff;
     text-transform: uppercase;
     font-size: 1.25em;
@@ -420,7 +422,9 @@ figure.effect {
   figure.effect h2 {
     word-spacing: -0.15em;
     font-weight: 300;
-    text-align: left; }
+    text-align: left;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+    padding: 2rem; }
   figure.effect h2 span {
     font-weight: 800; }
   figure.effect h2, figure.effect p {
