--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -312,6 +312,10 @@ a {
 	}
 }
 
+.skill-block{
+	word-wrap: break-word;
+}
+
 @media only screen and (max-width:576px){
 
 	.work-with-me{
