--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -25,7 +25,7 @@ figure.effect {
   }
 
   figcaption {
-    padding: 2em;
+    // padding: 2em;
     color: #fff;
     text-transform: uppercase;
     font-size: 1.25em;
@@ -45,6 +45,8 @@ figure.effect {
     word-spacing: -0.15em;
     font-weight: 300;
   	text-align: left;
+    background: linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,0.8));
+    padding: 2rem;
   }
 
   h2 span {
